--- a/randompasswordgenerator/password.css
+++ b/randompasswordgenerator/password.css
@@ -10,7 +10,10 @@ body{
 }
 .container {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    text-align: center;
 
 }
