--- a/randompasswordgenerator/password.css
+++ b/randompasswordgenerator/password.css
@@ -12,8 +12,46 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    flex-direction: column;
-    text-align: center;
 
+}
+.container-password-generator{
+    margin: 12%;
+    width: 90%;
+    max-width: 400px;
+}
+.password-generate{
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    background-color: hsl(0, 0%, 100%);
+    color: rgb(216, 4, 216);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 26px 25px;
+    border-radius: 5px;
+}
+.container h1{
+
+    font-weight: 500;
+    font-size: 45px;
+    
+}
+.container h1 span{
+    color: rgb(211, 20, 97);
+    border-bottom:4px solid #764ba2;
+}
+.container button{
+    border: 0;
+    outline: 0;
+    background-color: hotpink;
+    color: thistle;
+    font-size: larger;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px 26px;
+    border-radius: 5px; 
+    cursor: pointer;
 }
