--- a/todolist/style.css
+++ b/todolist/style.css
@@ -17,6 +17,11 @@ body {
     width: 80%;
     height: 80%;
     display: flex;
+    font-display: block;
+    cursor: pointer;
+    gap: unset;
+    align-items:top;
+    justify-items: center;
     background: rgb(16, 46, 126);
     border-radius: 15px;
     overflow: hidden;
@@ -30,6 +35,7 @@ body {
 
 .left {
     background: #dff1ff;
+    color: rgb(111, 25, 232);
 }
 
 .left h2, .right h2 {
